// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on <GiffExpertApp /> should print a list of categories 1`] = `
<Fragment>
  <h2>
    GiffExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GiffGrid
      category="naruto"
      key="naruto"
    />
    <GiffGrid
      category="one punch"
      key="one punch"
    />
  </ol>
</Fragment>
`;

exports[`Tests on <GiffExpertApp /> should print the component 1`] = `
<Fragment>
  <h2>
    GiffExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
